--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.3.0",
+    "lucide-react": "^0.303.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
